[package]
name = "dysmey"
version = "0.1.0"
authors = ["aravk33 <aravkasi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4.11"
postgres = "0.17.3"
rand = "0.7"
rand_hc = "0.2.0"
rust-argon2 = "0.8.2"
