[package]
name = "dysmey"
version = "0.1.0"
authors = ["aravk33 <aravkasi@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
rocket = { version = "0.4.7", features = ["private-cookies"] }
rocket_contrib = { version = "0.4.7", features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2.7"
chrono = "0.4"
rand = "0.7"
rand_hc = "0.2.0"
rust-argon2 = "0.8.2"
md5 = "0.7.0"
